@@ -6,8 +6,12 @@ Version 1.3.14+svn:
   * Language and translations
     * Updated translations: Chinese, Danish, Dutch, French, Italian, Lithuanian,
       Spanish, Turkish.
- * user interface:
-   * Made ESC clear hotkey when changing hotkeys
+
+ * User interface
+   * Made ESC clear hotkey when changing hotkeys.
+
+ * Miscellaneous and bug fixes
+   * Added a more graceful handling of maps without a header.
 
 Version 1.3.14:
   * Campaigns
