@@ -17,6 +17,7 @@ Version 1.3.14+svn:
      usefull
    * converted NO_MAP_DATA to new map format
    * fixed unchecked vector access
+   * added a more graceful handling of maps without a header (bug #10787)
 
 Version 1.3.14:
  * campaigns:
